--- a/client/main.scss
+++ b/client/main.scss
@@ -3,8 +3,8 @@
 
 @include md-core();
 $app-primary: md-palette($md-light-blue, 500, 100, 700);
-$app-accent:  md-palette($md-light-green, A200, A100, A400);
-$app-warn:    md-palette($md-red);
+$app-accent: md-palette($md-light-green, A200, A100, A400);
+$app-warn: md-palette($md-red);
 $app-theme: md-light-theme($app-primary, $app-accent, $app-warn);
 @include angular-material-theme($app-theme);
 
@@ -37,4 +37,7 @@ body.web {
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
-//@import "./imports/material-layout";
+.content {
+  max-width: 1000px;
+  margin: auto;
+}
